--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ div {
   width: 700px;
   margin: auto;
   font-family: "Helvetica Neue";
-  background: white;
+  background-color: white;
   padding: 30px;
   /* Your code here! */
 }
